nenolod     2006/01/31 02:02:59 UTC	(20060131-4739)
  Log:
  Enforce channel access on initial creation.
  

  Changes:	Modified:
  +8 -4		trunk/modules/chanserv/main.c (File Modified) 


nenolod     2006/01/31 01:56:22 UTC	(20060131-4737)
  Log:
  Add notes about PTLink IRCd.
  

  Changes:	Modified:
  +2 -0		trunk/doc/IRCD (File Modified) 


jilles      2006/01/27 15:45:40 UTC	(20060127-4735)
  Log:
  ircnet: add +R (reop list) ban-like cmode.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/ircnet.c (File Modified) 


jilles      2006/01/25 19:03:01 UTC	(20060125-4733)
  Log:
  Note removal of nickname linking.
  

  Changes:	Modified:
  +5 -0		trunk/doc/RELEASE (File Modified) 


jilles      2006/01/25 13:03:22 UTC	(20060125-4729)
  Log:
  P10 account caveats.
  

  Changes:	Modified:
  +18 -0	trunk/doc/IRCD (File Modified) 


jilles      2006/01/25 12:58:31 UTC	(20060125-4727)
  Log:
  Move netsplit/drop/reregister discussion from doc/IRCD to DROP help files,
  as currently all protocol modules that recognize login state after
  netsplits/services restarts have this issue.
  

  Changes:	Modified:
  +3 -8		trunk/doc/IRCD (File Modified) 
  +4 -0		trunk/help/nickserv/drop (File Modified) 
  +4 -0		trunk/help/userserv/drop (File Modified) 


jilles      2006/01/25 12:52:19 UTC	(20060125-4725)
  Log:
  - These are 1.0rc1 release notes.
  - Add umode +r account hacking fix.
  

  Changes:	Modified:
  +5 -2		trunk/doc/RELEASE (File Modified) 


jilles      2006/01/25 12:44:18 UTC	(20060125-4723)
  Log:
  Dreamforge/sorcery: set +r/-r as in the unreal module; no svsid support for now.
  

  Changes:	Modified:
  +13 -4	trunk/protocol/dreamforge.c (File Modified) 
  +13 -4	trunk/protocol/sorcery.c (File Modified) 


jilles      2006/01/25 12:43:15 UTC	(20060125-4721)
  Log:
  Ultimate3: Disable the code that automatically logs in a user
  if they have umode +r. I don't know if it's cleared on nick
  change (if not, this would allow everyone to log in as