@@ -1,3 +1,15 @@
+jilles      2006/01/31 02:14:11 UTC	(20060131-4741)
+  Log:
+  Try to avoid 'enforce channel access on initial creation'
+  applying on netsplits. This assumes the ircd does TS and
+  there is at most 60 seconds difference between the clocks
+  and lag.
+  
+
+  Changes:	Modified:
+  +3 -1		trunk/modules/chanserv/main.c (File Modified) 
+
+
 nenolod     2006/01/31 02:02:59 UTC	(20060131-4739)
   Log:
   Enforce channel access on initial creation.
